--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="top-page（ゲーム）">
 
     <link rel="icon" href="oanhngologo.png">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -97,5 +97,6 @@
 </body>
 
 </html>
+
 
 
